# wsl-systemd

./: Cargo.toml  LICENSE  rust-toolchain.toml
home/.config/systemd/user/: gpg-agent.socket  gpg-agent@.service  ssh-agent.socket  ssh-agent@.service
pageant/: Cargo.toml
pageant/src/: main.rs
pipette/: Cargo.toml
pipette/src/: main.rs
root/usr/sbin/: start-systemd-in-namespace  start-systemd-in-namespace-stage1  systemd-login
