[package]
name = "pageant"
version = "0.1.0"
authors = [ "andy.m.caldwell@googlemail.com" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
thiserror = "1.0.56"

[dependencies.windows]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
]
